Quick readability updates, BEM fixes etc

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,6 +6,6 @@
 
 
 body {
-    background-color: $bgBody;
+    background-color: $color-body;
     margin: 10px;
 }
