--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,5 +2,5 @@
 footer {
     width: 100%;
     margin: auto;
-    background-color: $bgFooter;
+    background-color: $color-footer;
 }
