--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,13 +1,12 @@
-.rotation
-{
-    animation: rotation 2s infinite linear;
+.soundbyte__rotation {
+  animation: soundbyte__rotation 2s infinite linear;
 }
 
-@keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
+@keyframes soundbyte__rotation {
+  from {
+    transform: rotate(0deg);
   }
+  to {
+    transform: rotate(359deg);
+  }
+}
